Fix sonarqube violations